ADD_SUBDIRECTORY(uuid)
ADD_SUBDIRECTORY(boost)
ADD_SUBDIRECTORY(protobuf)
SET(PROTOBUF_LIBRARY libprotobuf CACHE STRING "Protobuf library (for protobuf-c)" FORCE)
SET(PROTOBUF_PROTOC_LIBRARY libprotoc CACHE STRING "Protobuf protoc library (for protobuf-c)" FORCE)
SET(PROTOBUF_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/protobuf/src CACHE STRING "Protobuf include dir (for protobuf-c)" FORCE)
SET(PROTOBUF_PROTOC_EXECUTABLE protoc CACHE STRING "Protobuf protoc executable (for protobuf-c)" FORCE)
SET(PROTOBUF_LIBRARIES "libprotobuf;libprotoc;${ZLIB_LIBRARY}" CACHE STRING "Protobuf libraries (for protobuf-c)" FORCE)
SET(PROTOBUF_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/protobuf/src CACHE STRING "Protobuf include dir (for protobuf-c)" FORCE)
